--- a/Inspection/AvtoriPage.xaml
+++ b/Inspection/AvtoriPage.xaml
@@ -10,37 +10,37 @@
       Title="Avtori">
 
     <!-- основной грид -->
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="30*"/>
-            <RowDefinition Height="40*"/>
-            <RowDefinition Height="30*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="25*"/>
-            <ColumnDefinition Width="50*"/>
-            <ColumnDefinition Width="25*"/>
-        </Grid.ColumnDefinitions>
+    <materialDesign:Card>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30*"/>
+                <RowDefinition Height="40*"/>
+                <RowDefinition Height="30*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="25*"/>
+                <ColumnDefinition Width="50*"/>
+                <ColumnDefinition Width="25*"/>
+            </Grid.ColumnDefinitions>
 
-        <Button
+
+
+            <Button
             Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Top"
               Content="X"
               IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
               Style="{StaticResource MaterialDesignFlatDarkBgButton}"
-              ToolTip="MaterialDesignFlatDarkButton" Background="#FFDC0303" BorderBrush="#FF2F0101" Click="ExitButton_Click" Height="32" Width="41" />
-
-        <!-- Центральная панель для авторизации -->
+              ToolTip="MaterialDesignFlatDarkButton" Background="#FFDC0303" BorderBrush="#FF2F0101" Click="ExitButton_Click" Height="32" Width="41"/>
 
 
-        <Border x:Name="MyBorder" Grid.Row="1" Grid.Column="1" 
-            Background="White" BorderBrush="DarkGray" BorderThickness="1" CornerRadius="20" Padding="20">
+            <!-- Центральная панель для авторизации -->
+            <Border x:Name="MyBorder" Grid.Row="1" Grid.Column="1" Background="White" BorderBrush="DarkGray" BorderThickness="1" CornerRadius="20" Padding="20">
             <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MaxWidth="{Binding ActualWidth, ElementName=MyBorder}" MaxHeight="{Binding ActualHeight, ElementName=MyBorder}" Cursor="">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="20*" x:Name="SizeGrid"/>
                     <RowDefinition Height="20*"/>
-                    <RowDefinition Height="20*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="20*"/>
+                        <RowDefinition Height="20*"/>
+                        <RowDefinition Height="20*"/>
                 </Grid.RowDefinitions>
 
                 <Viewbox Grid.Row="0" >
@@ -87,6 +87,7 @@
                 </Grid>
             </Grid>
         </Border>
-
-    </Grid>
+        
+        </Grid>
+    </materialDesign:Card>
 </Page>
