--- a/Inspection/PageApp/MainPage.xaml
+++ b/Inspection/PageApp/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Inspection.MainPage"
+﻿<Page x:Class="Inspection.PageApp.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -35,11 +35,11 @@
                         </Grid.ColumnDefinitions>
                         
                         <Button IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
-                                Style="{StaticResource MaterialDesignFloatingActionSecondaryButton}"
+                                Style="{StaticResource MaterialDesignFloatingActionSecondaryButton}" Click="ToggleThemeButton_Click"
                                 ToolTip="MaterialDesignFloatingActionSecondaryButton">
                             <Viewbox>
-                                <materialDesign:PackIcon VerticalAlignment="Center"
-                                Kind="Alarm" Margin="5"/>
+                                <materialDesign:PackIcon x:Name="ThemeButtonIcon" VerticalAlignment="Center"
+                                Kind="LampOutline" Margin="5" Cursor=""/>
                             </Viewbox>
 
                         </Button>
@@ -61,28 +61,32 @@
 
         <Grid Grid.Row="1">
             <materialDesign:Card>
-                <TabControl materialDesign:NavigationRailAssist.ShowSelectionBackground="True" SnapsToDevicePixels="True" Style="{StaticResource MaterialDesignNavigationRailTabControl}" TabStripPlacement="Left">       
+                <TabControl x:Name="MainMenu" materialDesign:NavigationRailAssist.ShowSelectionBackground="True" SnapsToDevicePixels="True" Style="{StaticResource MaterialDesignNavigationRailTabControl}" TabStripPlacement="Left">       
                     <TabItem>
                         <TabItem.Header>
                             <StackPanel Width="auto" Height="auto">
                                 <materialDesign:PackIcon Width="24" Height="24" HorizontalAlignment="Center" Kind="Magnify"/>
-                                <TextBlock HorizontalAlignment="Center" Text="Поиск" />
+                                <Viewbox>
+                                    <TextBlock HorizontalAlignment="Center" Text="Поиск" Margin="5" />
+                                </Viewbox>
                             </StackPanel>
                         </TabItem.Header>
-                        <StackPanel>
-                            <Frame/>
-                        </StackPanel>
+                        <Grid>
+                            <Frame x:Name="searchPage" HorizontalAlignment="Stretch" />
+                        </Grid>
                     </TabItem>
 
                     <TabItem>
                         <TabItem.Header>
                             <StackPanel Width="auto" Height="auto">
-                                <materialDesign:PackIcon Width="24" Height="24" HorizontalAlignment="Center" Kind="Magnify"/>
-                                <TextBlock HorizontalAlignment="Center" Text="Поиск" />
+                                <materialDesign:PackIcon Width="24" Height="24" HorizontalAlignment="Center" Kind="CogOutline"/>
+                                <Viewbox>
+                                    <TextBlock HorizontalAlignment="Center" Text="Настройки" Margin="5" />
+                                </Viewbox>
                             </StackPanel>
                         </TabItem.Header>
                         <StackPanel>
-                            <Frame/>
+                            
                         </StackPanel>
                     </TabItem>
 
